buildkite: Use a real tmpfs
The vmm-sys-util test make heavy use of temporary dirs and files.
Running that under a container overlay leads to erratic behaviours and
this is fixed by using a real tmpfs mount into the container's /tmp.

Signed-off-by: Samuel Ortiz <sameo@linux.intel.com>

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -46,6 +46,7 @@ steps:
           privileged: true
           image: "fandree/rust-vmm-dev"
           always-pull: true
+          tmpfs: [ "/tmp:exec" ]
           
   - label: "unittests-gnu-arm"
     commands:
@@ -59,6 +60,7 @@ steps:
           privileged: true
           image: "fandree/rust-vmm-dev"
           always-pull: true
+          tmpfs: [ "/tmp:exec" ]
   
   - label: "clippy-x86"
     commands:
