--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -8,7 +8,7 @@ steps:
       platform: x86_64.metal
     plugins:
       - docker#v3.0.1:
-          image: "fandree/rust-vmm-dev"
+          image: "rustvmm/dev:v2"
           always-pull: true
 
   - label: "build-gnu-arm"
@@ -20,9 +20,49 @@ steps:
       platform: arm.metal
     plugins:
       - docker#v3.0.1:
-          image: "fandree/rust-vmm-dev"
+          image: "rustvmm/dev:v2"
           always-pull: true
           
+  - label: "build-musl-arm"
+    commands:
+     - cargo build --release --target aarch64-unknown-linux-musl
+    retry:
+      automatic: false
+    agents:
+      platform: arm.metal
+      os: linux
+    plugins:
+      - docker#v3.0.1:
+          image: "rustvmm/dev:v2"
+          always-pull: true
+
+  - label: "unittests-musl-x86"
+    commands:
+     - cargo test --all-features --target x86_64-unknown-linux-musl
+    retry:
+      automatic: false
+    agents:
+      platform: x86_64.metal
+      os: linux
+    plugins:
+      - docker#v3.0.1:
+          image: "rustvmm/dev:v2"
+          always-pull: true
+
+  - label: "unittests-musl-arm"
+    commands:
+     - cargo test --all-features --target aarch64-unknown-linux-musl
+    retry:
+      automatic: false
+    agents:
+      platform: arm.metal
+      os: linux
+    plugins:
+      - docker#v3.0.1:
+          image: "rustvmm/dev:v2"
+          always-pull: true
+
+
   - label: "style"
     command: cargo fmt --all -- --check
     retry:
@@ -31,7 +71,7 @@ steps:
       platform: x86_64.metal
     plugins:
       - docker#v3.0.1:
-          image: "fandree/rust-vmm-dev"
+          image: "rustvmm/dev:v2"
           always-pull: true
   
   - label: "unittests-gnu-x86"
@@ -44,7 +84,7 @@ steps:
     plugins:
       - docker#v3.0.1:
           privileged: true
-          image: "fandree/rust-vmm-dev"
+          image: "rustvmm/dev:v2"
           always-pull: true
           tmpfs: [ "/tmp:exec" ]
           
@@ -58,7 +98,7 @@ steps:
     plugins:
       - docker#v3.0.1:
           privileged: true
-          image: "fandree/rust-vmm-dev"
+          image: "rustvmm/dev:v2"
           always-pull: true
           tmpfs: [ "/tmp:exec" ]
   
@@ -71,5 +111,43 @@ steps:
       platform: x86_64.metal
     plugins:
       - docker#v3.0.1:
-          image: "fandree/rust-vmm-dev"
+          image: "rustvmm/dev:v2"
+          always-pull: true
+
+  - label: "clippy-arm"
+    commands:
+     - cargo clippy --all -- -D warnings
+    retry:
+      automatic: false
+    agents:
+      platform: arm.metal
+    plugins:
+      - docker#v3.0.1:
+          image: "rustvmm/dev:v2"
+          always-pull: true
+
+  - label: "check-warnings-x86"
+    commands:
+      - RUSTFLAGS="-D warnings" cargo check --all-targets
+    retry:
+      automatic: false
+    agents:
+      platform: x86_64.metal
+      os: linux
+    plugins:
+      - docker#v3.0.1:
+          image: "rustvmm/dev:v2"
+          always-pull: true
+
+  - label: "check-warnings-arm"
+    commands:
+      - RUSTFLAGS="-D warnings" cargo check --all-targets
+    retry:
+      automatic: false
+    agents:
+      platform: arm.metal
+      os: linux
+    plugins:
+      - docker#v3.0.1:
+          image: "rustvmm/dev:v2"
           always-pull: true
