--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,8 @@ libc = ">=0.2.39"
 serde = { version = ">=1.0.27", optional = true }
 serde_derive = { version = ">=1.0.27", optional = true }
 
+[target.'cfg(unix)'.dependencies]
+bitflags = "1.0"
+
 [dev-dependencies]
 serde_json = ">=1.0.9"
