--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ libc = ">=0.2.39"
 serde = { version = ">=1.0.27", optional = true }
 serde_derive = { version = ">=1.0.27", optional = true }
 
-[target.'cfg(unix)'.dependencies]
+[target.'cfg(linux)'.dependencies]
 bitflags = "1.0"
 
 [dev-dependencies]
