--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ license = "Apache-2.0 AND BSD-3-Clause"
 with-serde = ["serde", "serde_derive"]
 
 [dependencies]
-libc = ">=0.2.39"
+libc = ">=0.2.74"
 serde = { version = ">=1.0.27", optional = true }
 serde_derive = { version = ">=1.0.27", optional = true }
 
-[target.'cfg(target_os = "linux")'.dependencies]
+[target.'cfg(any(target_os = "linux", target_os = "illumos"))'.dependencies]
 bitflags = "1.0"
 
 [dev-dependencies]
