Build docs.rs documentation with features enabled
The current documentation build in docs.rs does not include any
crate features (at the moment just "with-serde"), which might lead
to users of the crate not being aware of their existence.

Signed-off-by: Carlos López <carlos.lopez@suse.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ keywords = ["utils"]
 edition = "2021"
 license = "BSD-3-Clause"
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [features]
 with-serde = ["serde", "serde_derive"]
 
