chore: update codeowners
Remove JonathanWoollett-Light.
Add ShadowCurse.

Signed-off-by: Egor Lazarchuk <yegorlz@amazon.co.uk>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @liujing2 @sameo @andreeaflorescu @jiangliu @roypat @JonathanWoollett-Light
+* @liujing2 @sameo @andreeaflorescu @jiangliu @roypat @ShadowCurse
