--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 with-serde = ["serde", "serde_derive"]
 
 [dependencies]
+arbitrary_shim = { version = "0.1.0", path = "../KaniAutoGenRegression/src/plugin/arbitrary_shim" }
 libc = "0.2.39"
 serde = { version = "1.0.27", optional = true }
 serde_derive = { version = "1.0.27", optional = true }
@@ -27,3 +28,10 @@ bitflags = "1.0"
 [dev-dependencies]
 serde_json = "1.0.9"
 bincode = "1.3.3"
+bolero = "0.11.1"
+
+[profile.fuzz]
+inherits="dev"
+opt-level=3
+incremental=false
+codegen-units=1
